force-app/main/default/objects/Contact/fields/Maturity_Reduction_Scenario_2__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Reduction_Scenario_2__c</fullName>
    <formula>ROUND((Current_Loan_Payments_Remaining__c - Payments_Remaining_Scenario_2__c)/12, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maturity Reduction</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>