force-app/main/default/objects/Contact/fields/MD_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>MD_Birthdate__c</fullName>
    <description>This field will be used for the Melissa Data (Listware) implementation to store cleaned birthdate.</description>
    <label>MD Birthdate</label>
    <type>Date</type>
</CustomField>