force-app/main/default/objects/Contact/fields/MD_Date_of_Death__c.field-meta.xml
<CustomField>
    <fullName>MD_Date_of_Death__c</fullName>
    <description>This field will be used for the Melissa Data (Listware) implementation to store cleaned date of death.</description>
    <label>MD Date of Death</label>
    <type>Date</type>
</CustomField>