force-app/main/default/objects/Contact/fields/MD_Email__c.field-meta.xml
<CustomField>
    <fullName>MD_Email__c</fullName>
    <description>This field will be used for the Melissa Data (Listware) implementation to store cleaned email.</description>
    <label>MD Email</label>
    <type>Email</type>
</CustomField>