force-app/main/default/objects/Contact/fields/MD_First_Name__c.field-meta.xml
<CustomField>
    <fullName>MD_First_Name__c</fullName>
    <description>This field will be used for the Melissa Data (Listware) implementation to store cleaned first names.</description>
    <label>MD First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>