force-app/main/default/objects/Contact/fields/MD_Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>MD_Mailing_City__c</fullName>
    <description>This field will be used for the Melissa Data (Listware) implementation to store cleaned mailing city.</description>
    <label>MD Mailing City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>