force-app/main/default/objects/Contact/fields/MD_Mailing_Country__c.field-meta.xml
<CustomField>
    <fullName>MD_Mailing_Country__c</fullName>
    <description>This field will be used for the Melissa Data (Listware) implementation to store cleaned mailing country.</description>
    <label>MD Mailing Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>