force-app/main/default/objects/Contact/fields/MD_Mailing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>MD_Mailing_Postal_Code__c</fullName>
    <description>This field will be used for the Melissa Data (Listware) implementation to store cleaned mailing postal code.</description>
    <label>MD Mailing Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>