force-app/main/default/objects/Contact/fields/MD_Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>MD_Mailing_Street__c</fullName>
    <description>This field will be used for the Melissa Data (Listware) implementation to store cleaned mailing street.</description>
    <label>MD Mailing Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>