force-app/main/default/objects/Contact/fields/MD_Phone__c.field-meta.xml
<CustomField>
    <fullName>MD_Phone__c</fullName>
    <description>This field will be used for the Melissa Data (Listware) implementation to store a cleaned phone number.</description>
    <label>MD Phone</label>
    <type>Phone</type>
</CustomField>