force-app/main/default/objects/Contact/fields/MMCT_Loan_Count__c.field-meta.xml
<CustomField>
    <fullName>MMCT_Loan_Count__c</fullName>
    <inlineHelpText>Num of minority, majority census track loans found for agent&apos;s purchases in the 12 mo preceding Export Date</inlineHelpText>
    <label>MMCT Loan Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>