force-app/main/default/objects/Contact/fields/Monthly_Payment_Savings_Scenario_2__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Payment_Savings_Scenario_2__c</fullName>
    <formula>Current_Payment__c - Monthly_Payment_Scenario_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Payment Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>