force-app/main/default/objects/Contact/fields/Next_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Next_Birthdate__c</fullName>
    <description>This field will be used to compute the next birthdate for a contact to be used in report filtering but not available on the UI.</description>
    <formula>IF(ISBLANK(Birthdate), 
 null,
 IF(
   AND(DAY(Birthdate)=29, MONTH(Birthdate)=2),
   IF(DATE(YEAR(TODAY()), 3,1)&gt;= TODAY(), DATE(YEAR(TODAY()),3,1), DATE(YEAR(TODAY())+1,3,1)),


   IF(DATE(YEAR(TODAY()), MONTH(Birthdate), DAY(Birthdate))&gt;= TODAY(),
   DATE(YEAR(TODAY()), MONTH(Birthdate), DAY(Birthdate)),
   DATE(YEAR(TODAY())+1, MONTH(Birthdate), DAY(Birthdate)))
 
)
)</formula>
    <label>Next Birthdate</label>
    <type>Date</type>
</CustomField>