force-app/main/default/objects/Contact/fields/Nickname__c.field-meta.xml
<CustomField>
    <fullName>Nickname__c</fullName>
    <label>Nickname</label>
    <type>TextArea</type>
</CustomField>