force-app/main/default/objects/Contact/fields/On_Pace_Payment_Scenario_2__c.field-meta.xml
<CustomField>
    <fullName>On_Pace_Payment_Scenario_2__c</fullName>
    <formula>First_Loan_Amount_Scenario_2__c *( RateScenario2__c /12)*((1+( RateScenario2__c /12))^Current_Loan_Payments_Remaining__c) /(((1+( RateScenario2__c /12))^Current_Loan_Payments_Remaining__c) -1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On Pace Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>