force-app/main/default/objects/Contact/fields/On_Pace_Savings_Scenario_1__c.field-meta.xml
<CustomField>
    <fullName>On_Pace_Savings_Scenario_1__c</fullName>
    <formula>SelectedProperty__r.PaymentAmount__c - On_Pace_Payment_Scenario_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On Pace Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>