force-app/main/default/objects/Contact/fields/Opt_Out_ECOA_Info__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_ECOA_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contact declined to provide information on Sex, Race and Ethnicity for Equal Credit Opportunity Act reporting purposes.</description>
    <inlineHelpText>Contact declined to provide Sex, Race and Ethnicity</inlineHelpText>
    <label>Opt Out ECOA Info</label>
    <type>Checkbox</type>
</CustomField>