force-app/main/default/objects/Contact/fields/Payments_Remaining_Scenario_3__c.field-meta.xml
<CustomField>
    <fullName>Payments_Remaining_Scenario_3__c</fullName>
    <formula>ROUND((LOG((-Current_Payment__c)/((First_Loan_Amount_Scenario_3__c*(RateScenario3__c/12)- Current_Payment__c ))))/(LOG(1+(RateScenario3__c/12))), 3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payments Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>