force-app/main/default/objects/Contact/fields/Present_Address__c.field-meta.xml
<CustomField>
    <fullName>Present_Address__c</fullName>
    <label>Present Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>