force-app/main/default/objects/Contact/fields/Present_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Present_Address_City__c</fullName>
    <label>Present Address City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>