force-app/main/default/objects/Contact/fields/Present_Address_State__c.field-meta.xml
<CustomField>
    <fullName>Present_Address_State__c</fullName>
    <label>Present Address State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>