force-app/main/default/objects/Contact/fields/Present_Address_Zip__c.field-meta.xml
<CustomField>
    <fullName>Present_Address_Zip__c</fullName>
    <label>Present Address Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>