force-app/main/default/objects/Contact/fields/PropertyAppraisedValue__c.field-meta.xml
<CustomField>
    <fullName>PropertyAppraisedValue__c</fullName>
    <formula>SelectedProperty__r.Appraised_Value_of_Most_Recent_Closing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Appraised Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>