force-app/main/default/objects/Contact/fields/PropertyDayssinceRecentClosing__c.field-meta.xml
<CustomField>
    <fullName>PropertyDayssinceRecentClosing__c</fullName>
    <formula>SelectedProperty__r.Days_Since_Most_Recent_Closing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Days since Recent Closing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>