force-app/main/default/objects/Contact/fields/PropertyEstimatedValue__c.field-meta.xml
<CustomField>
    <fullName>PropertyEstimatedValue__c</fullName>
    <formula>SelectedProperty__r.Estimated_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Estimated Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>