force-app/main/default/objects/Contact/fields/PropertyLender__c.field-meta.xml
<CustomField>
    <fullName>PropertyLender__c</fullName>
    <formula>SelectedProperty__r.Lender_of_Most_Recent_Closing__c</formula>
    <label>Property Lender</label>
    <type>Text</type>
</CustomField>