force-app/main/default/objects/Contact/fields/PropertyLoanAmountwithMIP__c.field-meta.xml
<CustomField>
    <fullName>PropertyLoanAmountwithMIP__c</fullName>
    <formula>SelectedProperty__r.Loan_Amt_with_MIP_of_Most_Recent_Closing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Loan Amount with MIP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>