force-app/main/default/objects/Contact/fields/PropertyLoanProgram__c.field-meta.xml
<CustomField>
    <fullName>PropertyLoanProgram__c</fullName>
    <formula>SelectedProperty__r.Loan_Program_of_Most_Recent_Closing__c</formula>
    <label>Property Loan Program</label>
    <type>Text</type>
</CustomField>