force-app/main/default/objects/Contact/fields/PropertyLTV__c.field-meta.xml
<CustomField>
    <fullName>PropertyLTV__c</fullName>
    <formula>SelectedProperty__r.LTV_of_Most_Recent_Closing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property LTV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>