force-app/main/default/objects/Contact/fields/PropertyMostRecentClosing__c.field-meta.xml
<CustomField>
    <fullName>PropertyMostRecentClosing__c</fullName>
    <formula>SelectedProperty__r.Most_Recent_Closing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Most Recent Closing</label>
    <type>Date</type>
</CustomField>