force-app/main/default/objects/Contact/fields/PropertyNumberofUnits__c.field-meta.xml
<CustomField>
    <fullName>PropertyNumberofUnits__c</fullName>
    <formula>TEXT(SelectedProperty__r.Number_of_Units__c)</formula>
    <label>Property Number of Units</label>
    <type>Text</type>
</CustomField>