force-app/main/default/objects/Contact/fields/PropertyOccupancy__c.field-meta.xml
<CustomField>
    <fullName>PropertyOccupancy__c</fullName>
    <formula>SelectedProperty__r.Occupancy_of_Most_Recent_Closing__c</formula>
    <label>Property Occupancy</label>
    <type>Text</type>
</CustomField>