force-app/main/default/objects/Contact/fields/PropertyPaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>PropertyPaymentAmount__c</fullName>
    <formula>SelectedProperty__r.PaymentAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>