force-app/main/default/objects/Contact/fields/PropertyPurchasePrice__c.field-meta.xml
<CustomField>
    <fullName>PropertyPurchasePrice__c</fullName>
    <formula>SelectedProperty__r.Purchase_Price_of_Most_Recent_Closing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Purchase Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>