force-app/main/default/objects/Contact/fields/PropertyPurpose__c.field-meta.xml
<CustomField>
    <fullName>PropertyPurpose__c</fullName>
    <formula>SelectedProperty__r.Purpose_of_Most_Recent_Closing__c</formula>
    <label>Property Purpose</label>
    <type>Text</type>
</CustomField>