force-app/main/default/objects/Contact/fields/PropertyRate__c.field-meta.xml
<CustomField>
    <fullName>PropertyRate__c</fullName>
    <formula>SelectedProperty__r.Rate_of_Most_Recent_Closing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>