force-app/main/default/objects/Contact/fields/PropertyScheduledBalance__c.field-meta.xml
<CustomField>
    <fullName>PropertyScheduledBalance__c</fullName>
    <formula>SelectedProperty__r.Scheduled_Balance_of_Most_Recent_Closing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Scheduled Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>