force-app/main/default/objects/Contact/fields/PropertyType__c.field-meta.xml
<CustomField>
    <fullName>PropertyType__c</fullName>
    <formula>TEXT(SelectedProperty__r.Property_Type__c)</formula>
    <label>Property Type</label>
    <type>Text</type>
</CustomField>